--- a/expense-tracker-client/src/app/app.component.html
+++ b/expense-tracker-client/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h2>{{ message()?.title }}</h2>
-<p>{{ message()?.description }}</p>
+<section class="text-center mt-4">
+  <h2>{{ message()?.title }}</h2>
+  <p>{{ message()?.description }}</p>
+</section>
